# astatus

./: .gitignore  LICENSE  Makefile  README.md  agent_status.py  devbox.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
agent_status.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: TODO.md  a2a-compat.md  agent-status-v1alpha1.md  extension-requirements.md
examples/: a2a-linked-status.json  pi-emitter.sh  sample-status.json
pi-extension/: README.md  index.js  package.json
pi-extension/test/: composite.test.js  index.test.js
schema/: agent-status-v1alpha1.schema.json
tests/: test_agent_status.py
