[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_status"]

[project]
name = "agent-status"
version = "0.1.0"
description = "Local agent status reference implementation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "astatus contributors" }]
dependencies = ["rich>=13"]

[project.scripts]
agent-status = "agent_status:main"
