[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_status"]

[project]
name = "agent-status"
version = "0.1.5"
description = "Local agent status reference implementation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "astatus contributors" }]
keywords = ["agent", "status", "local", "a2a", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["rich>=13"]

[project.urls]
Homepage = "https://github.com/julsemaan/astatus"
Repository = "https://github.com/julsemaan/astatus"
Issues = "https://github.com/julsemaan/astatus/issues"

[project.scripts]
agent-status = "agent_status:main"
